--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -205,7 +205,7 @@ As a second example of undesirable behaviour, suppose we fit a Besag model upon 
 If the spatial variation is relatively smooth, dividing the shaded areas into two will result in a lower estimated variance $\sigma^2_u$ in Panel \@ref(fig:maup3)B as compared with Panel \@ref(fig:maup3)A because there will appear to be less variation between neighbouring areas.
 This problem does not only apply locally: since the effect of $\sigma^2_u$ applies everywhere, the smoothing will change even in unaltered parts of the study region.
 
-### Weighted ICAR models {weighted-icar}
+### Weighted ICAR models {#weighted-icar}
 
 The Besag model is a special case of a more general class of (zero-mean) weighted ICAR models.
 These models can be specified in terms of scaled weights $\{b_{ij}\}_{j \sim i}$ and a precision vector $\boldsymbol{\mathbf{\kappa}} = (\kappa_i)_{i \in [n]}$.
@@ -450,7 +450,6 @@ For each of the three spatial random effect models and seven geometries 250 synt
 
 | Model | Details       |
 |-------|---------------|
-| Constant | Without spatial random effects $\mathbf{u} = \mathbf{0}$ |
 | IID   | $\mathbf{u} \sim \mathcal{N}(0, \tau_u^{-1} \mathbf{I}_n)$ |
 | Besag | $\mathbf{u} \sim \mathcal{N}(0, \tau_u^{-1} {\mathbf{R}^\star}^{-})$ as in Section \@ref(besag) |
 | BYM2  | $\mathbf{u} = \tau_u^{-1} ( \sqrt{1 - \pi} \, \mathbf{v} + \sqrt{\pi} \, \mathbf{w}^\star)$ as in Section \@ref(bym2) with $\pi \sim \text{Beta}(0.5, 0.5)$ |
