--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -972,7 +972,7 @@ This section considers inference using three approaches (Table \@ref(tab:loaloa-
 |----------------|---------------|---------------
 | Gaussian, AGHQ | `TMB` and `aghq` | $k = 3$ |
 | Laplace, AGHQ  | `TMB` and `aghq` | $k = 3$ |
-| NUTS           | `tmbstan`     | 4 chains of 5000 iterations, default NUTS settings [@carpenter2017stan] |
+| NUTS           | `tmbstan`     | 4 chains of 5000 iterations, with default NUTS settings as implemented in `rstan` [@carpenter2017stan] |
 
 Table: (\#tab:loaloa-approaches) The inference methods and software considered to fit the Loa loa ELGM in Section \@ref(loaloa).
 
@@ -1342,7 +1342,7 @@ Three Bayesian inference approaches were considered:
 1. Gaussian marginals and EB with `TMB`.
 This approach was previously used in production for Naomi.
 As short-hand, this approach is referred to as GEB.
-2. Gaussian marginals and PCA-AGHQ with `TMB`
+2. Gaussian marginals and PCA-AGHQ with `TMB`.
 This is a novel approach, enabled by the methodological work of Section \@ref(pca-aghq).
 As short-hand, this approach is referred to as GPCA-AGHQ.
 3. NUTS with `tmbstan`.
