--- a/91-appendixB.Rmd
+++ b/91-appendixB.Rmd
@@ -25,7 +25,7 @@ Table: (\#tab:unaids-strategy-prioritisation) Prioritisation strata for AGYW giv
 
 Table: (\#tab:unaids-strategy-targets) Commitments recommended by @unaids2021global to be met for each HIV intervention, given in terms of the proportion of the AGYW prioritisation strata reached. The symbol "-" represents no commitment.
 
-## Household survey data
+## Household survey data {#household-survey-data-agyw}
 
 ```{r household-survey-data}
 gt_available_surveys <- readRDS(paste0("resources/multi-agyw/", resource_version, "/depends/available-surveys.rds"))
