--- a/front-and-back-matter/_acknowledgements.Rmd
+++ b/front-and-back-matter/_acknowledgements.Rmd
@@ -1,14 +1,14 @@
 I would first like to express my gratitude to Seth Flaxman and Jeff Eaton for their mentorship.
 Their guidance has been crucial in shaping this thesis, and my development as a scientist.
 <!-- Thanks to my examiners Adam Sykulski and Chris Paciorek. -->
-I am thankful that the HIV Inference Group at Imperial tolerated a mathematician, helped me learn to present my work, and exposed me to purpose-driven research.
-I am grateful too for the environment provided by the Modern Statistics and Statistical Machine Learning Centre for Doctoral Training at Imperial and Oxford, and the Machine Learning and Global Health Network.
+Thanks to the HIV Inference Group at Imperial for exposing me to impact driven research, helping me to learn to present my work, and tolerating a statistician.
+I am grateful to have been a part of the Modern Statistics and Statistical Machine Learning Centre for Doctoral Training at Imperial and Oxford, and the Machine Learning and Global Health Network.
 Thanks to Antoine, Chris, Enrico, Phil, Yanni, Theo, Tim, Liza, and Theo for conversations, some of which were about research.
 This work was made possible by funding provided by the EPSRC and Bill & Melinda Gates Foundation.
 There are many worse ways to spend billions of dollars than fighting poverty and disease.
 
 Thanks to Mike McLaren, Kevin Esvelt, the Nucleic Acid Observatory team, and the Sculpting Evolution lab for hosting my visit to the MIT Media Lab.
-I left Cambridge with appropriately raised aspirations, Google document templates, and only slightly terrified about the future.
+I left Cambridge with appropriately raised aspirations, Google document templates, and only a little terrified about the future.
 Thanks to Trenton, Lenni, Lenny, Geetha, Janika, Simon, Phil, Frances, Leilani and Tammy.
 
 Thanks to Alex Stringer, and the Department of Statistics and Actuarial Science, for hosting my visit to the University of Waterloo.
@@ -25,8 +25,8 @@ Thanks to Mr Sam, and attendees of the Manshead grit salt, for conferring upon m
 No thanks to Simon Marshall, he didn't help, if anything he held me back.
 I extend my deepest thanks to my parents, Deborah and Karl, and my grandparents, Kath and Tony, whose love and support have granted me the privilege to pursue my interests.
 
-\begin{flushright}
-Adam Howes \\
-Imperial College London\\
-December 2023
-\end{flushright}
+<!-- \begin{flushright} -->
+<!-- Adam Howes \\ -->
+<!-- Imperial College London\\ -->
+<!-- December 2023 -->
+<!-- \end{flushright} -->
