--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -1436,7 +1436,7 @@ knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depe
 
 ### Inference comparison
 
-(ref:naomi-time) The number of hours taken to perform inference for the Naomi ELGM (Section \@ref(sec:naomi-model)) using each approach.
+(ref:naomi-time) The number of hours taken to perform inference for the Naomi ELGM (Section \@ref(naomi-model)) using each approach.
 
 ```{r naomi-time, fig.height = 3, fig.width = 6.25, fig.cap="(ref:naomi-time)"}
 time_taken <- readr::read_csv(paste0("resources/naomi-aghq/", resource_version, "/depends/time-taken.csv"))
