--- a/07-conclusions.Rmd
+++ b/07-conclusions.Rmd
@@ -39,7 +39,7 @@ knitr::include_graphics("figures/conclusions/global-update-conclusion.png")
 Chapter \@ref(multi-agyw) estimated HIV risk group proportions for AGYW to enable implementation of the Global AIDS strategy [@unaids2021global].
 Risk group proportion estimates were used to behaviourally disaggregate HIV prevalence and incidence, and assess the benefits of a variety of risk stratification strategies.
 This work is the basis for a tool used to prioritise delivery of HIV prevention services by countries in SSA.
-The tool now encompasses at least 30 countries, expanding from the initial 13 included [Figure \@ref(fig:global-update); @unaids2023global].
+The tool now encompasses at least 30 countries, expanding from the initial 13 included [Figure \@ref(fig:global-update-conclusion); @unaids2023global].
 Models will be rerun each year to populate the tool with updated information as a part of the UNAIDS annual HIV estimates process.
 Alongside these applied contributions, Chapter \@ref(multi-agyw) exemplified specification of complex multinomial spatio-temporal models in `R-INLA` using the Poisson-multinomial transformation, including using two- and three-way Kronecker product interactions.
 
@@ -67,7 +67,7 @@ Although the naive implementation used in this thesis is viable for integrating 
 Usability would be improved by providing the method as a part of statistical software, likely via the `aghq` package.
 The primary difficulty which would have to be overcome to do so is that the `random` argument of `TMB::MakeADFun` does not allow indexing.
 
-(ref:conditional-simulation-diff-k-fixed) For the Loa loa ELGM (Section \@ref(sec:loaloa)), increasing the number of quadrature nodes per hyperparameter dimension from $k = 3$ to $k = 7$ did little to improve accuracy. On the other hand, using Laplace marginals rather than Gaussian marginals did have a substantial effect (Figures \@ref(fig:conditional-simulation-phi-diff-fixed) and \@ref(fig:conditional-simulation-rho-diff-fixed)). More broadly, it would be valuable to better understand, and aspirationally have diagnostics for, the circumstances under which more accurate approximations are required.
+(ref:conditional-simulation-diff-k-fixed) For the Loa loa ELGM (Section \@ref(loaloa)), increasing the number of quadrature nodes per hyperparameter dimension from $k = 3$ to $k = 7$ did little to improve accuracy. On the other hand, using Laplace marginals rather than Gaussian marginals did have a substantial effect (Figures \@ref(fig:conditional-simulation-phi-diff-fixed) and \@ref(fig:conditional-simulation-rho-diff-fixed)). It would be valuable to better understand, and aspirationally have diagnostics for, the circumstances under which accuracy of INLA methods could be improved by additional computation.
 
 ```{r conditional-simulation-diff-k-fixed, fig.cap="(ref:conditional-simulation-diff-k-fixed)"}
 knitr::include_graphics("figures/naomi-aghq/conditional-simulation-diff-k-fixed.png")
@@ -120,7 +120,7 @@ Indeed, I have seen evidence of engagement with this work by decision makers.
 
 To the best of my abilities, this thesis, and the work described within it, was written in keeping with the principles of open science.
 I hope that having done so facilitates my work to be scrutinised, and more optimistically, built upon.
-In part this hope has already been realised, as with limited input from me, Dr. Kathryn Risher was able to extend my code for Chapter \@ref(multi-agyw) to include additional countries (Panel \@ref(fig:global-update)B).
+In part this hope has already been realised, as with limited input from me, Dr. Kathryn Risher was able to extend my code for Chapter \@ref(multi-agyw) to include additional countries (Panel \@ref(fig:global-update-conclusion)B).
 This would not have been possible without tools from the R ecosystem such as `rmarkdown` and `rticles` for reporting, `devtools` for R package development, as well as those written by software engineers within the MRC Centre for Global Infectious Disease Analysis such as `orderly` and `didehpc`.
 It is crucial that academia adjusts to appropriately incentivises software contributions, and encourages adaption of open science best practices.
 Work done to inform public health decision making should be held to high standards of transparency, reproducibility and collaboration.
