Add time taken discussion to Loa loa and improve writing in general

--- a/92-appendixC.Rmd
+++ b/92-appendixC.Rmd
@@ -43,7 +43,7 @@ knitr::include_graphics("figures/naomi-aghq/stan-epil.png")
 
 ### NUTS convergence and suitability
 
-(ref:nuts-loa-loa) Traceplots for the parameters with the lowest ESS and highest potential scale reduction factor.
+(ref:nuts-loa-loa) Traceplots for the parameters with the lowest ESS and highest potential scale reduction factor for the Loa loa ELGM example.
 
 ```{r nuts-loa-loa, fig.cap="(ref:nuts-loa-loa)"}
 knitr::include_graphics("figures/naomi-aghq/nuts-loa-loa.png")
