--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -979,13 +979,13 @@ Table: (\#tab:loaloa-approaches) The inference methods and software considered t
 @bilodeau2022stochastic found that NUTS did not converge for the full model, but did converge when the values of $\beta_\phi$ and $\beta_\rho$ were fixed at their posterior mode (obtained using AGHQ with Gaussian marginals).
 To allow for comparison between Gaussian and Laplace marginals, the same approach was taken here.
 
-After obtaining posterior inferences at each $s_i$, the `gstat::krige` function [@pebesma2004gstat] was used to implement conditional Gaussian field simulation [@sds; Chapter 12] over a fine grid.
-In each conditional simulation independent latent field and hyperparameter samples were used.
-For each method, 500 conditional Gaussian field simulations were obtained.
+After obtaining posterior inferences at each $s_i$, the `gstat::krige` function [@pebesma2004gstat] was used to implement conditional Gaussian field simulation [@sds; Chapter 12] over a fine spatial grid.
+Independent latent field and hyperparameter samples were used in each conditional simulation.
+For each method (Table \@ref(tab:loaloa-approaches)) 500 conditional Gaussian field simulations were obtained.
 
 #### Results
 
-(ref:conditional-simulation-adam-fixed) Posterior mean of the suitability $\mathbb{E}[\phi_\texttt{LA}(s)]$ (Panel A) and prevalence $\mathbb{E}[\rho_\texttt{LA}(s)]$ (Panel B) random fields computed using Laplace marginals.
+(ref:conditional-simulation-adam-fixed) Posterior mean of the suitability $\mathbb{E}[\phi_\texttt{LA}(s)]$ (Panel A) and prevalence $\mathbb{E}[\rho_\texttt{LA}(s)]$ (Panel B) random fields computed using Laplace marginals. Inferences over this fine spatial grid were using conditional Gaussian field simulation as implemented by `gstat::kridge`.
 
 ```{r conditional-simulation-adam-fixed, fig.cap="(ref:conditional-simulation-adam-fixed)"}
 knitr::include_graphics("figures/naomi-aghq/conditional-simulation-adam-fixed.png")
@@ -993,40 +993,55 @@ knitr::include_graphics("figures/naomi-aghq/conditional-simulation-adam-fixed.pn
 
 Figure \@ref(fig:conditional-simulation-adam-fixed) shows the suitability and prevalence posterior means across the fine grid obtained using AGHQ with Laplace marginals.
 
-(ref:conditional-simulation-phi-diff-fixed) Difference between the suitability posterior means with Gaussian marginals $\mathbb{E}[\phi_\texttt{G}(s)]$ and Laplace marginals $\mathbb{E}[\phi_\texttt{LA}(s)]$ to NUTS results. As $\beta_\phi$ was fixed this difference is as a result in differences in estimation of $u(s)$. The diverging colour palette used in this figure is from @thyng2016true.
+(ref:conditional-simulation-phi-diff-fixed) Difference between the suitability posterior means with Gaussian marginals $\mathbb{E}[\phi_\texttt{G}(s)]$ and Laplace marginals $\mathbb{E}[\phi_\texttt{LA}(s)]$ to NUTS results. While the Gaussian approximation appears to systematically underestimate suitability, results from the Laplace approximation are substantially closer to results from NUTS. As $\beta_\phi$ was fixed this difference is as a result in differences in estimation of $u(s)$. The diverging colour palette used in this figure is from @thyng2016true.
 
 ```{r conditional-simulation-phi-diff-fixed, fig.cap="(ref:conditional-simulation-phi-diff-fixed)"}
 knitr::include_graphics("figures/naomi-aghq/conditional-simulation-phi-diff-fixed.png")
 ```
 
-(ref:conditional-simulation-rho-diff-fixed) Difference between the prevalence posterior means with Gaussian marginals $\mathbb{E}[\rho_\texttt{G}(s)]$ and Laplace marginals $\mathbb{E}[\rho_\texttt{LA}(s)]$ to NUTS results. As $\beta_\rho$ was fixed this difference is as a result in differences in estimation of $v(s)$. The diverging colour palette used in this figure is from @thyng2016true.
+(ref:conditional-simulation-rho-diff-fixed) Difference between the prevalence posterior means with Gaussian marginals $\mathbb{E}[\rho_\texttt{G}(s)]$ and Laplace marginals $\mathbb{E}[\rho_\texttt{LA}(s)]$ to NUTS results. Like the suitability in Figure \@ref(fig:conditional-simulation-phi-diff-fixed), the error the the Gaussian approximation is higher than that of the Laplace approximation. As $\beta_\rho$ was fixed this difference is as a result in differences in estimation of $v(s)$. The diverging colour palette used in this figure is from @thyng2016true.
 
 ```{r conditional-simulation-rho-diff-fixed, fig.cap="(ref:conditional-simulation-rho-diff-fixed)"}
 knitr::include_graphics("figures/naomi-aghq/conditional-simulation-rho-diff-fixed.png")
 ```
 
-(ref:loa-loa-mean-sd-abs) Absolute difference between the Gaussian and Laplace marginal posterior means and standard deviations to NUTS results at each $u(s_i), v(s_i): i \in [190]$. Relative differences are in Figure \@ref(fig:loa-loa-mean-sd-pct).
+(ref:loa-loa-mean-sd-abs) Absolute difference between the Gaussian and Laplace marginal posterior means and standard deviations to NUTS results at each $u(s_i), v(s_i): i \in [190]$. Relative differences are in Figure \@ref(fig:loa-loa-mean-sd-pct). For close to every node, the Laplace approximation produced a more accurate posterior mean than the Gaussian approximation. For the posterior standard deviation (SD), the picture was more mixed.
 
 ```{r loa-loa-mean-sd-abs, fig.cap="(ref:loa-loa-mean-sd-abs)"}
 knitr::include_graphics("figures/naomi-aghq/loa-loa-mean-sd-abs.png")
 ```
 
-(ref:loa-loa-worst-node) The element of the latent field with maximum difference in absolute difference to NUTS for the posterior mean was $u_{184}$.
+(ref:loa-loa-worst-node) The element of the latent field with maximum difference in absolute difference to NUTS for the posterior mean was $u_{184}$. While the Gaussian approximation has substantial error as compared with NUTS, the Laplace approximation is a close match.
 
 ```{r loa-loa-worst-node, fig.cap="(ref:loa-loa-worst-node)"}
 knitr::include_graphics("figures/naomi-aghq/loa-loa-worst-node.png")
 ```
 
-For both the suitability (Figures \@ref(fig:conditional-simulation-phi-diff-fixed)) and prevalence (Figure \@ref(fig:conditional-simulation-rho-diff-fixed)) posterior mean, using Laplace marginals rather than Gaussian marginals substantially reduces the extent of error with respect to NUTS.
+For both the suitability and prevalence posterior mean, using Laplace marginals rather than Gaussian marginals substantially reduced error compared to NUTS (Figures \@ref(fig:conditional-simulation-phi-diff-fixed) and \@ref(fig:conditional-simulation-rho-diff-fixed)).
 As the hyperparameter posteriors for each approach were the same, differences in Gaussian field simulation results were due to differences in latent field posterior marginals at each of the 190 sites, shown in Figure \@ref(fig:loa-loa-mean-sd-abs).
+At some sites, the differences in ECDF were subtantial (Figure \@ref(fig:loa-loa-worst-node)).
+Figure \@ref(fig:nuts-loa-loa) shows that the results from NUTS were suitable for use, and therefore that this comparison is valid.
 
 (ref:loa-loa-time) The number of minutes taken to perform inference for the Loa loa ELGM using each approach given in Table \@ref(tab:loaloa-approaches).
 
 ```{r loa-loa-time, fig.cap="(ref:loa-loa-time)"}
+loa_time <- read_csv("figures/naomi-aghq/loa-loa-time.csv")
+
+loa_time_gaussian <- filter(loa_time, method == "Gaussian, AGHQ")
+loa_time_laplace <- filter(loa_time, method == "Laplace, AGHQ")
+loa_time_tmbstan <- filter(loa_time, method == "NUTS")
+
+loa_nuts_multiplier <-  signif(100 * loa_time_laplace$time / loa_time_tmbstan$time, 3)
+loa_time_tmbstan_hours <- signif(loa_time_tmbstan$time / 60 / 60, 3)
+loa_time_laplace_hours <- signif(loa_time_laplace$time / 60 / 60, 3)
+loa_time_gaussian <- signif(loa_time_gaussian$time / 60, 3)
+
 knitr::include_graphics("figures/naomi-aghq/loa-loa-time.png")
 ```
 
-Comment about the time taken (Figure \@ref(fig:loa-loa-time)).
+Laplace marginals with AGHQ took `r loa_nuts_multiplier`% of time taken (`r loa_time_tmbstan_hours` hours) by NUTS (Figure \@ref(fig:loa-loa-time)).
+That said, Gaussian marginals with AGHQ took less than a minute to run: substantially less than the `r loa_time_laplace_hours` hours taken by the Laplace marginals.
+A less naive Laplace implementation may achieve a runtime more competitive to the Gaussian.
 
 ## The Naomi model {#naomi}
 
