Fix grammar, remove overlap from table in PDF, improve figure captions

--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -607,7 +607,7 @@ Table: (\#tab:hiv-surveys) The four PHIA household surveys included in the HIV p
 
 ### Household survey data
 
-(ref:hiv-surveys) Adult (15-49) HIV prevalence from the most recent PHIA survey conducted in Côte d'Ivoire (Panel A), Malawi (Panel B), Tanzania (Panel C), and Zimbabwe (Panel D). These estimates survey weighted according to Equation \@ref(eq:survey-weighted-prevalence).
+(ref:hiv-surveys) Adult (15-49) HIV prevalence from the most recent PHIA survey conducted in Côte d'Ivoire (Panel A), Malawi (Panel B), Tanzania (Panel C), and Zimbabwe (Panel D). These estimates are survey weighted according to Equation \@ref(eq:survey-weighted-prevalence).
 
 ```{r hiv-surveys, fig.cap="(ref:hiv-surveys)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/hiv-surveys.png")
