--- a/92-appendixC.Rmd
+++ b/92-appendixC.Rmd
@@ -39,6 +39,8 @@ knitr::include_graphics("figures/naomi-aghq/tmbstan-epil.png")
 knitr::include_graphics("figures/naomi-aghq/stan-epil.png")
 ```
 
+\newpage
+
 ## Loa loa example
 
 ### NUTS convergence and suitability
@@ -293,8 +295,8 @@ The `TMB` C++ code for the negative log-posterior of the simplified Naomi model 
 For ease of understanding, Table \@ref(tab:tmb-lookup) provides correspondence between the mathematical notation used in Section \@ref(naomi-math) and the variable names used in the `TMB` code, for all hyperparameters and latent field parameters.
 For further reference on the `TMB` software see @tmbdocumentation.
 
-| Variable name            | Notation          | Type   | Domain  | $\rho$ | $\alpha$ | $\lambda$ |
-|--------------------------|------------------ |--------|---------|--------|----------|-----------|
+| Variable name              | Notation    | Type   | Domain  | $\rho$ | $\alpha$ | $\lambda$ |
+|----------------------------|-------------|--------|---------|--------|----------|-----------|
 | `logit_phi_rho_x`      | $\text{logit}(\phi_X^\rho)$                          | Hyper  | $\mathbb{R}$      | Yes |     |     |
 | `log_sigma_rho_x`      | $\log(\sigma_X^\rho)$                                | Hyper  | $\mathbb{R}$      | Yes |     |     |
 | `logit_phi_rho_xs`     | $\text{logit}(\phi_{XS}^\rho)$                       | Hyper  | $\mathbb{R}$      | Yes |     |     |
@@ -345,6 +347,8 @@ For further reference on the `TMB` software see @tmbdocumentation.
 
 Table: (\#tab:tmb-lookup) Correspondence between the variable name used in the Naomi `TMB` template and the mathematical notation used in Appendix \@ref(naomi-math). The parameter type, either a hyperparameter or element of the latent field, is also given. All of the parameters are defined on the real-scale in some dimension. In the final three columns ($\rho$, $\alpha$, and $\lambda$) indication is given as to which component of the model the parameter is primarily used in.
 
+\newpage
+
 ## NUTS convergence and suitability
 
 ```{r}
@@ -369,13 +373,13 @@ knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depe
 knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/worst-trace.png"))
 ```
 
-(ref:rho-a) NUTS pairs plots for the parameters $\log(\sigma_{A}^\rho)$ and $\text{logit}(\phi_{A}^\rho)$, or as written `log_sigma_rho_a` and `logit_phi_rho_a`.
+(ref:rho-a) Pairs plots for the parameters $\log(\sigma_{A}^\rho)$ and $\text{logit}(\phi_{A}^\rho)$ (or `log_sigma_rho_a` and `logit_phi_rho_a`).
 
 ```{r rho-a, fig.cap="(ref:rho-a)"}
 knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/rho_a.png"))
 ```
 
-(ref:alpha-x) NUTS pairs plots for the parameters $\log(\sigma_X^\alpha)$ and $\text{logit}(\phi_X^\alpha)$, or as written `log_sigma_alpha_x` and `logit_phi_alpha_x`.
+(ref:alpha-x) Pairs plots for the parameters $\log(\sigma_X^\alpha)$ and $\text{logit}(\phi_X^\alpha)$ (or `log_sigma_alpha_x` and `logit_phi_alpha_x`).
 
 ```{r alpha-x, fig.cap="(ref:alpha-x)"}
 knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/alpha_x.png"))
