--- a/07-conclusions.Rmd
+++ b/07-conclusions.Rmd
@@ -80,7 +80,10 @@ knitr::include_graphics("figures/naomi-aghq/conditional-simulation-diff-k-fixed.
     
     As an example research question, within this class of models, what is the best way to obtain accurate inferences within a fixed computational budget.
     Is it better to use additional hyperparameter grid points, or more accurate latent field approximations?
-    For the Loa loa ELGM, the benefit of Laplace marginals was greater than a denser AGHQ grid (Figure \@ref(fig:conditional-simulation-diff-k-fixed)).
+    For the Loa loa ELGM in Section \@ref(loaloa), the benefit of Laplace marginals was greater than a denser AGHQ grid (Figure \@ref(fig:conditional-simulation-diff-k-fixed)).
+    It would also be of interest to find methods to obtain accurate inferences for particular parameters, or functions of parameters, using INLA-like methods.
+    For example, in Section \@ref(malawi), although the PCA-AGHQ grid improved latent field parameter inferences, it did little to improve model output accuracy.
+    Is there a way in which computational could be focused on obtaining accurate estimates of Naomi model outputs?
 
     Additionally, it is relatively easy to make alterations to the implementaiton, facilitating possible innovation in the design of INLA-like algorithms.
     Previously, it has been difficult for researchers not involved in development of `R-INLA` to engage in methodological work about the INLA method.
