Naomi AGHQ writing

--- a/92-appendixC.Rmd
+++ b/92-appendixC.Rmd
@@ -407,6 +407,12 @@ u <- runif(10000)
 knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/nodes-quantiles-sd.png"))
 ```
 
+(ref:marginal-sd) The estimated posterior marginal standard deviation of each hyperparameter varied substantially based on its scale, either logarithmic or logistic.
+
+```{r marginal-sd, fig.cap="(ref:marginal-sd)"}
+knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/marginal-sd.png"))
+```
+
 ## Inference comparison
 
 ### Point estimates
