--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -1415,21 +1415,15 @@ Posterior variances can be extracted from NUTS results, and prior variances obta
 tv_df <- readr::read_csv(paste0("resources/naomi-aghq/", resource_version, "/depends/total-variation.csv"))
 ```
 
-For the PCA-AGHQ quadrature grid, a Scree plot based on the spectral decomposition of $\hat {\mathbf{H}}_\texttt{LA}(\boldsymbol{\mathbf{\theta}}_\texttt{LA})^{-1}$ was used to select the number of principal components to keep (Figure \@ref(fig:total-variation)).
-Keeping $s = 8$ principal components was sufficient to explain `r round(100 * tv_df$tv[8])`% of total variation.
-The reduced rank approximation to the inverse curvature with this choice of $s$ was visually similar to the full rank matrix (Figure \@ref(fig:reduced-rank)).
-
-(ref:total-variation) Under PCA, the proportion of total variation explained is given by the sum of the first $s$ eigenvalues over the sum of all eigenvalues. A typical rule-of-thumb is to include dimensions sufficient to explain 90% of total variation. In this case, for computational reasons, `r round(100 * tv_df$tv[8])`% was considered sufficient.
-
-```{r total-variation, fig.cap="(ref:total-variation)"}
-knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/total-variation.png"))
-```
-
 (ref:reduced-rank) The full rank original covariance matrix (Panel A) was closely reproduced by its reduced rank ($s = 8$) matrix approximation (Panel B).
 
 ```{r reduced-rank, fig.cap="(ref:reduced-rank)"}
 knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/reduced-rank.png"))
 ```
+
+For the PCA-AGHQ quadrature grid, a Scree plot based on the spectral decomposition of $\hat {\mathbf{H}}_\texttt{LA}(\boldsymbol{\mathbf{\theta}}_\texttt{LA})^{-1}$ was used to select the number of principal components to keep (Figure \@ref(fig:total-variation)).
+Keeping $s = 8$ principal components was sufficient to explain `r round(100 * tv_df$tv[8])`% of total variation.
+The reduced rank approximation to the inverse curvature with this choice of $s$ was visually similar to the full rank matrix (Figure \@ref(fig:reduced-rank)).
 
 (ref:pc-loadings) Each principal component loading, obtained by the eigendecomposition of the inverse curvature, gives the direction of maximum variation conditional on inclusion of each previous principal component loading. For example, the first principal component loading is a sum of `log_sigma_alpha_as` and `logit_phi_alpha_as`.
 
@@ -1437,19 +1431,23 @@ knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depe
 knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/pc-loadings.png"))
 ```
 
-(ref:nodes-samples-comparison) The $k^s = 3^8 = 6561$ PCA-AGHQ nodes projected onto the 24 hyperparameter marginal distributions obtained with NUTS.
+(ref:nodes-samples-comparison) The 6561 PCA-AGHQ nodes projected onto the 24 hyperparameter marginal distributions obtained with NUTS.
 
 ```{r nodes-samples-comparison, fig.cap="(ref:nodes-samples-comparison)"}
 knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/nodes-samples-comparison.png"))
 ```
 
-(ref:marginal-sd) The estimated posterior marginal standard deviation of each hyperparameter varied substantially based on its scale, either logarithmic or logistic.
+When projecting the $3^8 = 6561$ PCA-AGHQ quadrature nodes onto each hyperparameter dimension, there was substantial variation in coverage by hyperparameter (Figure \@ref(fig:nodes-samples-comparison)).
+Coverage was higher among hyperparameters on the logistic scale, and lower among hyperparameters on the logarithmic scale.
+This discrepancy occured due to logistic hyperparameters naturally having higher posterior marginal standard deviation than logarithmic hyperparameters (Figure \@ref(fig:marginal-sd)).
 
-```{r marginal-sd, fig.cap="(ref:marginal-sd)"}
-knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/marginal-sd.png"))
+(ref:total-variation) Under PCA, the proportion of total variation explained is given by the sum of the first $s$ eigenvalues over the sum of all eigenvalues. A typical rule-of-thumb is to include dimensions sufficient to explain 90% of total variation. In this case, for computational reasons, `r round(100 * tv_df$tv[8])`% was considered sufficient.
+
+```{r total-variation, fig.cap="(ref:total-variation)"}
+knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/total-variation.png"))
 ```
 
-### Inference comparison
+### Time taken
 
 (ref:naomi-time) The number of hours taken to perform inference for the Naomi ELGM (Section \@ref(naomi-model)) using each approach.
 
@@ -1465,11 +1463,12 @@ time_taken$aghq <- time_taken$aghq * 60 * 60
 #' Measured in days (convert to seconds)
 time_taken$tmbstan <- time_taken$tmbstan * 60 * 60 * 24
 
-as.data.frame(t(time_taken)) %>%
+time_taken_df <- as.data.frame(t(time_taken)) %>%
   tibble::rownames_to_column("method") %>%
   mutate(
     mins = V1 / 60,
     hours = mins / 60,
+    days = hours / 24,
     method = case_when(
       method == "TMB" ~ "GEB",
       method == "aghq" ~ "GPCA-AGHQ",
@@ -1479,14 +1478,25 @@ as.data.frame(t(time_taken)) %>%
       method == "NUTS" ~ "tmbstan",
       TRUE ~ "TMB"
     )
-  ) %>%
+  )
+
+time_taken_df %>%
   ggplot(aes(x = method, y = hours, fill = software)) +
   geom_col() +
   theme_minimal() +
   scale_fill_manual(values = c("#D55E00", "#CC79A7")) +
   labs(x = "", y = "Time taken (h)", fill = "Software") +
   coord_flip()
+
+naomi_time_tmbstan_hours <- signif(filter(time_taken_df, method == "NUTS")$hours, 2)
+naomi_time_aghq_hours <- signif(filter(time_taken_df, method == "GPCA-AGHQ")$hours, 2)
+naomi_time_tmb_minutes <- signif(filter(time_taken_df, method == "GEB")$mins, 1)
 ```
+
+Inference with NUTS took `r naomi_time_tmbstan_hours` hours, while inference with GPCA-AGHQ took `r naomi_time_aghq_hours` hours and GEB just `r naomi_time_tmb_minutes` minutes (Figure \@ref(fig:naomi-time)).
+Both the NUTS and GPCA-AGHQ algorithms can be run under a range of settings, trading off accuracy and runtime.
+
+### Inference comparison
 
 #### Point estimates
 
@@ -1495,6 +1505,8 @@ as.data.frame(t(time_taken)) %>%
 ```{r mean-sd-alt-latent, fig.cap="(ref:mean-sd-alt-latent)"}
 knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/mean-sd-alt-latent.png"))
 ```
+
+Latent field point estimates obtained from GPCA-AGHQ closer to the gold-standard results from NUTS than the estimates obtained from GEB were (Figure \@ref(mean-sd-alt-latent)).
 
 #### Distributional quantities
 
@@ -1506,7 +1518,11 @@ knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depe
 
 ### Exceedance probabilities
 
-#### Meeting the second 90
+#### Meeting the second 90 {#second90}
+
+Ambitious targets for scaling up ART treatment have been developed by UNAIDS, with the goal of ending the AIDS epidemic by 2030 [@unaids2014target].
+Meeting the 90-90-90 fast-track target requires that 90% of people living with HIV know their status, 90% of those are on ART, and 90% of those have a suppressed viral load.
+Inferences from Naomi can be used to identify treatment gaps by calculating the probability that the second 90 target has been met, that is $\mathbb{P}(\alpha_i > 0.9^2 = 0.81)$ for each strata $i$.
 
 (ref:exceedance-second90) The probability each strata has met the second 90 (ART coverage above 81\%) calculated using each inference method, as compared with NUTS. The root mean square error (RMSE) and mean absolute error (MAE) are displayed in the top left.
 
@@ -1514,11 +1530,13 @@ knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depe
 knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/exceedance-second90.png"))
 ```
 
-Ambitious targets for scaling up ART treatment have been developed by UNAIDS, with the goal of ending the AIDS epidemic by 2030 [@unaids2014target].
-Meeting the 90-90-90 fast-track target requires that 90% of people living with HIV know their status, 90% of those are on ART, and 90% of those have a suppressed viral load.
-Inferences from Naomi can be used to identify treatment gaps by calculating the probability that the second 90 target has been met, that is $\mathbb{P}(\alpha_i > 0.9^2 = 0.81)$ for each strata $i$.
+Strata probabilities of having met the second 90 target were more accurately estimated by GPCA-AGHQ than GEB (Figure \@ref(fig:exceedance-second90)).
+Both GPCA-AGHQ and GEB had substantial error as compared to results from NUTS, however, particularly for girls and women.
  
-#### Finding strata with high incidence
+#### Finding strata with high incidence {#1inc}
+
+Some HIV interventions are cost-effective only within high HIV incidence settings, typically defined as higher than 1% incidence per year.
+Inferences from Naomi can be used to calculate the probability of a strata having high incidence by evaluating $\mathbb{P}(\lambda_i > 0.01)$.
 
 (ref:exceedance-1inc) The probability each strata has high HIV incidence (above 1\% per year) calculated using each inference method, as compared with NUTS. The root mean square error (RMSE) and mean absolute error (MAE) are displayed in the top left.
 
@@ -1526,8 +1544,9 @@ Inferences from Naomi can be used to identify treatment gaps by calculating the 
 knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/exceedance-1inc.png"))
 ```
 
-Some HIV interventions are cost-effective only within high HIV incidence settings, typically defined as higher than 1% incidence per year.
-Inferences from Naomi can be used to calculate the probability of a strata having high incidence by evaluating $\mathbb{P}(\lambda_i > 0.01)$.
+GPCA-AGHQ gave more accurate estimates of the probability that a strata has high HIV incidence than GEB (Figure \@ref(exceedance-1inc)).
+Again, both methods had significant error.
+Unlike in Section \@(second90), there was little difference in error by sex.
 
 ## Discussion
 
